complete revamp of contents and ui/ux

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>여성 대리운전 서비스</title>
     <meta name="description" content="여성만을 위한 안전한 대리운전 서비스. 여성 기사가 여성 고객을 모십니다." />
     <meta name="author" content="여성 대리운전" />
+    <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Afacad&display=swap" rel="stylesheet">
+
 
     <meta property="og:title" content="여성 대리운전 서비스" />
     <meta property="og:description" content="여성만을 위한 안전한 대리운전 서비스" />
@@ -16,6 +18,18 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@womendrive" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D79Z0WHWPD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-D79Z0WHWPD');
+    </script>
+
+    <!-- useMetaPixel("2066927637129256") -->
   </head>
 
   <body>
