--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>여성 대리운전 서비스</title>
+    <title>mobl - 여성 대리운전 서비스</title>
     <meta name="description" content="여성만을 위한 안전한 대리운전 서비스. 여성 기사가 여성 고객을 모십니다." />
     <meta name="author" content="여성 대리운전" />
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Afacad&display=swap" rel="stylesheet">
 
 
-    <meta property="og:title" content="여성 대리운전 서비스" />
+    <meta property="og:title" content="mobl - 여성 대리운전 서비스" />
     <meta property="og:description" content="여성만을 위한 안전한 대리운전 서비스" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@womendrive" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/logo.png" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-D79Z0WHWPD"></script>
