--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="여성만을 위한 안전한 대리운전 서비스. 여성 기사가 여성 고객을 모십니다." />
     <meta name="author" content="여성 대리운전" />
     <link href="https://fonts.googleapis.com/css2?family=Advent+Pro&family=Afacad&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
 
 
     <meta property="og:title" content="mobl - 여성 대리운전 서비스" />
